--- a/src/app/nutrition-tracker/nutrition-tracker.page.html
+++ b/src/app/nutrition-tracker/nutrition-tracker.page.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
   <form (ngSubmit)="getNutritionalInfo()">
     <ion-item>
       <ion-label position="floating">Enter food items and quantities</ion-label>
