--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,8 +21,8 @@
     <ion-button expand="block" routerLink="/nutrition-tracker" color="primary">
       Nutrition Tracker
     </ion-button>
-    <ion-button expand="block" routerLink="/mindfulness-meditation" color="primary">
-      Mindfulness & Meditation
+    <ion-button expand="block" routerLink="/water-intake-calculator" color="primary">
+      Water Intake Calculator
     </ion-button>
     <ion-button expand="block" routerLink="/settings" color="primary">
       Settings
