--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>
+    <ion-title >
       Health Tracker
     </ion-title>
   </ion-toolbar>
@@ -24,8 +24,8 @@
     <ion-button expand="block" routerLink="/water-intake-calculator" color="primary">
       Water Intake Calculator
     </ion-button>
-    <ion-button expand="block" routerLink="/settings" color="primary">
-      Settings
+    <ion-button expand="block" routerLink="/weather-forcast" color="primary">
+      Check Weather
     </ion-button>
   </div>
 </ion-content>
