--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -41,3 +41,6 @@ ion-button[color="primary"] {
 ion-button[color="primary"]:hover {
   --background: #0056b3;
 }
+ion-title{
+  align-items: center;
+}
