--- a/src/app/timer/timer.page.html
+++ b/src/app/timer/timer.page.html
@@ -17,7 +17,7 @@
 
   <div class="water-intake">
   
-    <ion-icon name="pint"></ion-icon>
+   <ion-icon src=".\assets\icon\pint.svg"></ion-icon>
     <div class="glass-count">{{ glassesTaken }}</div>
     <ion-button (click)="addWater()">+</ion-button>
   </div>
