--- a/src/app/water-intake-calculator/water-intake-calculator.page.html
+++ b/src/app/water-intake-calculator/water-intake-calculator.page.html
@@ -29,4 +29,5 @@
   <ion-button expand="block" (click)="startTimer()" [disabled]="!waterIntake" routerLink="/timer">Start Timer</ion-button>
 
   <h1 *ngIf="waterIntake">Your minimum intake Water: {{waterIntake}} Liters</h1>
+  <h2 *ngIf="glassesOfWater">You should drink approximately {{ glassesOfWater }} glasses of water per day.</h2>
 </ion-content>
