--- a/src/app/activity-tracker/activity-tracker.page.html
+++ b/src/app/activity-tracker/activity-tracker.page.html
@@ -13,7 +13,7 @@
   <form (ngSubmit)="GetDailyData()">
   <ion-item>
       <ion-label position="floating">Enter your activity</ion-label>
-      <ion-input type="text" (ionInput)="updateActivity($event)" required></ion-input>
+      <ion-input type="text" (ionInput)="updateActivity($event)" required placeholder="Running"></ion-input>
   </ion-item>
   
   <!-- Button to calculate calories -->
