--- a/src/app/nutrition-tracker/nutrition-tracker.page.html
+++ b/src/app/nutrition-tracker/nutrition-tracker.page.html
@@ -12,7 +12,7 @@
   <form (ngSubmit)="getNutritionalInfo()">
     <ion-item>
       <ion-label position="floating">Enter food items and quantities</ion-label>
-      <ion-input type="text" (ionInput)="updateFoodQuery($event)" required></ion-input>
+      <ion-input type="text" (ionInput)="updateFoodQuery($event)" required placeholder="10oz onion and a apple"></ion-input>
     </ion-item>
     
     <ion-button expand="block" type="submit">Get Nutritional Info</ion-button>
